--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "f458fe37",
    "metadata": {},
    "outputs": [
@@ -55,33 +55,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "107862689\n"
      ]
     }
    ],
    "source": [
-    "def parse_memory(memory):\n",
-    "    instructions = memory.split()\n",
-    "    result = 0\n",
-    "    enabled = True\n",
-    "    for i in range(len(instructions)):\n",
-    "        if instructions[i] == 'do()':\n",
-    "            enabled = True\n",
-    "        elif instructions[i] == 'don\\'t()':\n",
-    "            enabled = False\n",
-    "        elif instructions[i].startswith('mul'):\n",
-    "            try:\n",
-    "                parts = instructions[i].split('(')\n",
-    "                num1, num2 = parts[1].split(',')\n",
-    "                num1, num2 = int(num1.strip()), int(num2.strip().rstrip(')'))\n",
-    "                if enabled:\n",
-    "                    result += num1 * num2\n",
-    "            except Exception as e:\n",
-    "                pass\n",
-    "    return result\n",
+    "import re\n",
     "\n",
-    "memory = \"xmul(2,4)&mul[3,7]!^don't()_mul(5,5)+mul(32,64](mul(11,8)undo()?mul(8,5))\"\n",
-    "print(parse_memory(memory))  # Output: 48"
+    "with open(\"Input/InputDay3P1.txt\", \"r\") as f:\n",
+    "    data = f.read()\n",
+    "\n",
+    "#data = \"\"\"\n",
+    "#xmul(2,4)&mul[3,7]!^don't()_mul(5,5)+mul(32,64](mul(11,8)undo()?mul(8,5))\n",
+    "#\"\"\"\n",
+    "\n",
+    "pattern = r\"mul\\(\\d+,\\d+\\)|do\\(+\\)|don\\'t\\(+\\)\"\n",
+    "instructions = re.findall(pattern, data)\n",
+    "\n",
+    "total_sum = 0\n",
+    "flag = True\n",
+    "for s in instructions:    \n",
+    "    if s == \"don't()\":\n",
+    "        flag = False\n",
+    "    elif s == \"do()\":\n",
+    "        flag = True\n",
+    "    elif flag:\n",
+    "        nums = s[4:-1].split(\",\")\n",
+    "        total_sum += int(nums[0]) * int(nums[1])\n",
+    "\n",
+    "print(total_sum)"
    ]
   }
  ],
