done Day6p2 and Day9

--- a/Day6.ipynb
+++ b/Day6.ipynb
@@ -109,6 +109,71 @@
     "distinct_positions_visited = simulate_guard_patrol(Inputdata)\n",
     "print(distinct_positions_visited)  # Output should be 41"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "420cadbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import cycle\n",
+    "\n",
+    "def traverse_path(pos_x, pos_y, obstacles, bound):\n",
+    "    visited = set()\n",
+    "    visited.add((pos_x, pos_y))\n",
+    "\n",
+    "    dirs = cycle([(0, -1), (1, 0), (0, 1), (-1, 0)])\n",
+    "    dir_x, dir_y = next(dirs)\n",
+    "    \n",
+    "    cache = set()\n",
+    "    cache.add((pos_x, pos_y, dir_x, dir_y))\n",
+    "\n",
+    "    while True:\n",
+    "        new_x, new_y = pos_x + dir_x, pos_y + dir_y\n",
+    "\n",
+    "        # If we hit an obstacle -> turn\n",
+    "        if (new_x, new_y) in obstacles:\n",
+    "            dir_x, dir_y = next(dirs)\n",
+    "\n",
+    "        # If we hit the border -> done\n",
+    "        elif new_x < 0 or new_x >= bound or new_y < 0 or new_y >= bound:\n",
+    "            return False, visited\n",
+    "\n",
+    "        # Else -> continue walking\n",
+    "        else:\n",
+    "            pos_x, pos_y = new_x, new_y\n",
+    "            visited.add((pos_x, pos_y))\n",
+    "\n",
+    "            # If we visit the same position in the same direction -> loop detected\n",
+    "            c = (pos_x, pos_y, dir_x, dir_y)\n",
+    "            if c in cache:\n",
+    "                return True, visited\n",
+    "            else:\n",
+    "                cache.add((pos_x, pos_y, dir_x, dir_y))\n",
+    "\n",
+    "\n",
+    "with open(\"Input/InputDay6P1.txt\", \"r\") as f:\n",
+    "    lines = [list(x.strip()) for x in f]\n",
+    "bound = len(lines)\n",
+    "\n",
+    "obstacles = set()\n",
+    "pos_x, pos_y = 0, 0\n",
+    "for y, line in enumerate(lines):\n",
+    "    for x, c in enumerate(line):\n",
+    "        if c == \"#\": obstacles.add((x,y))\n",
+    "        elif c == \"^\": pos_x, pos_y = x, y\n",
+    "\n",
+    "# Part 1\n",
+    "_, visited = traverse_path(pos_x, pos_y, obstacles, bound)\n",
+    "print(len(visited))\n",
+    "\n",
+    "# Part 2\n",
+    "# Check of position of new obstacle only on the traversed path of the guard\n",
+    "candidates = visited - {(pos_x, pos_y)}\n",
+    "\n",
+    "print(sum(traverse_path(pos_x, pos_y, obstacles | {cand}, bound)[0] for cand in candidates))"
+   ]
   }
  ],
  "metadata": {
