--- a/Day13.ipynb
+++ b/Day13.ipynb
@@ -180,7 +180,10 @@
     "    return prizes_won, total_cost\n",
     "\n",
     "# Example input text\n",
-    "input_text = \"\"\"Button A: X+94, Y+34\n",
+    "input_text = \"\"\"Butt\n",
+    "Button B: X+84, Y+37\n",
+    "Prize: X=10000000007870, Y=10000000006450\n",
+    "on A: X+94, Y+34\n",
     "Button B: X+22, Y+67\n",
     "Prize: X=10000000008400, Y=10000000005400\n",
     "\n",
@@ -189,9 +192,6 @@
     "Prize: X=10000000012748, Y=10000000012176\n",
     "\n",
     "Button A: X+17, Y+86\n",
-    "Button B: X+84, Y+37\n",
-    "Prize: X=10000000007870, Y=10000000006450\n",
-    "\n",
     "Button A: X+69, Y+23\n",
     "Button B: X+27, Y+71\n",
     "Prize: X=10000000018641, Y=10000000010279\"\"\"\n",
@@ -202,6 +202,59 @@
     "# Solve the problem\n",
     "prizes_won, total_cost = claw_contraption(machines)\n",
     "print(f\"Prizes won: {prizes_won}, Total cost: {total_cost}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bd78668c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: 108394825772874\n",
+      "runtime: 0.0132 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "def calc_for_machine(d):\n",
+    "    A = np.array([[int(d[0]), int(d[2])], [int(d[1]), int(d[3])]])\n",
+    "    y = np.array([10000000000000 + int(d[4]), 10000000000000 + int(d[5])])\n",
+    "    try:\n",
+    "        x = np.linalg.solve(A, y)\n",
+    "    except np.linalg.LinAlgError as e:\n",
+    "        print(e) # never happens for our input\n",
+    "        return 0\n",
+    "    # check if x is whole numbers and larger than 0\n",
+    "    x_rounded = np.round(x)\n",
+    "    x_is_valid = np.all(0 <= x_rounded) and np.allclose(x, x_rounded, rtol=1e-14, atol=1e-8) # need to adjust the defaults rtol=1e-9, atol=1e-5, because they were too sensitive for large values in y\n",
+    "    if not x_is_valid:\n",
+    "        return 0\n",
+    "    return int(np.dot(tokens_cost, x_rounded.reshape(-1, 1)).item())\n",
+    "\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# parse\n",
+    "file_path = 'Input/InputDay13P1.txt'\n",
+    "with open(file_path, 'r') as file:\n",
+    "    file_complete = file.read()\n",
+    "data = re.findall(r'Button A: X\\+(\\d+), Y\\+(\\d+)\\nButton B: X\\+(\\d+), Y\\+(\\d+)\\nPrize: X=(\\d+), Y=(\\d+)', file_complete)\n",
+    "\n",
+    "# run\n",
+    "tokens_cost = np.array([3, 1])\n",
+    "tokens = sum(calc_for_machine(d) for d in data)\n",
+    "print('Result:', tokens)\n",
+    "\n",
+    "end_time = time.time()\n",
+    "print(f'runtime: {end_time-start_time:.4f} s')\n"
    ]
   }
  ],
