--- a/Day16.ipynb
+++ b/Day16.ipynb
@@ -285,6 +285,302 @@
     "print(find_best_path_tiles(maze1))  # Should match problem's example: 45\n",
     "print(find_best_path_tiles(maze2))  # Should match problem's example: 64\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "310246eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75416\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "def solve():\n",
+    "    with open(\"Input/InputDay16P1.txt\", \"r\") as f:\n",
+    "        grid = [list(line.strip()) for line in f]\n",
+    "\n",
+    "    start_row, start_col = -1, -1\n",
+    "    end_row, end_col = -1, -1\n",
+    "\n",
+    "    for r in range(len(grid)):\n",
+    "        for c in range(len(grid[0])):\n",
+    "            if grid[r][c] == 'S':\n",
+    "                start_row, start_col = r, c\n",
+    "            elif grid[r][c] == 'E':\n",
+    "                end_row, end_col = r, c\n",
+    "\n",
+    "    q = [(0, start_row, start_col, 0)]  # (cost, row, col, direction)\n",
+    "    visited = set()\n",
+    "\n",
+    "    while q:\n",
+    "        cost, row, col, direction = heapq.heappop(q)\n",
+    "\n",
+    "        if (row, col, direction) in visited:\n",
+    "            continue\n",
+    "        visited.add((row, col, direction))\n",
+    "\n",
+    "        if row == end_row and col == end_col:\n",
+    "            return cost\n",
+    "\n",
+    "        # Move forward\n",
+    "        dr, dc = [(0, 1), (1, 0), (0, -1), (-1, 0)][direction]\n",
+    "        new_row, new_col = row + dr, col + dc\n",
+    "        if 0 <= new_row < len(grid) and 0 <= new_col < len(grid[0]) and grid[new_row][new_col] != '#':\n",
+    "            heapq.heappush(q, (cost + 1, new_row, new_col, direction))\n",
+    "\n",
+    "        # Turn clockwise\n",
+    "        new_direction = (direction + 1) % 4\n",
+    "        heapq.heappush(q, (cost + 1000, row, col, new_direction))\n",
+    "\n",
+    "        # Turn counterclockwise\n",
+    "        new_direction = (direction - 1 + 4) % 4\n",
+    "        heapq.heappush(q, (cost + 1000, row, col, new_direction))\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    result = solve()\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7fff1fad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "417\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "def solve():\n",
+    "    with open(\"Input/InputDay16P1.txt\", \"r\") as f:\n",
+    "        grid = [list(line.strip()) for line in f]\n",
+    "\n",
+    "    rows = len(grid)\n",
+    "    cols = len(grid[0])\n",
+    "\n",
+    "    start_row, start_col = -1, -1\n",
+    "    end_row, end_col = -1, -1\n",
+    "\n",
+    "    for r in range(rows):\n",
+    "        for c in range(cols):\n",
+    "            if grid[r][c] == 'S':\n",
+    "                start_row, start_col = r, c\n",
+    "            elif grid[r][c] == 'E':\n",
+    "                end_row, end_col = r, c\n",
+    "\n",
+    "    def is_valid(r, c):\n",
+    "        return 0 <= r < rows and 0 <= c < cols and grid[r][c] != '#'\n",
+    "\n",
+    "    def get_neighbors(r, c, direction):\n",
+    "        neighbors = []\n",
+    "        dr, dc = [(0, 1), (1, 0), (0, -1), (-1, 0)][direction]\n",
+    "        if is_valid(r + dr, c + dc):\n",
+    "            neighbors.append(((r + dr, c + dc), direction, 1))  # Move forward\n",
+    "\n",
+    "        for new_dir in [(direction + 1) % 4, (direction - 1) % 4]:\n",
+    "            neighbors.append(((r, c), new_dir, 1000)) #Rotate\n",
+    "        return neighbors\n",
+    "    \n",
+    "    def dijkstra():\n",
+    "        q = [(0, start_row, start_col, 0, [(start_row, start_col, 0)])] # score, row, col, direction, path (STARTING WITH START AND DIRECTION)\n",
+    "        visited = set()\n",
+    "        min_cost = float('inf')\n",
+    "        best_paths = []\n",
+    "\n",
+    "        while q:\n",
+    "            cost, r, c, direction, path = heapq.heappop(q)\n",
+    "\n",
+    "            if (r, c, direction) in visited:\n",
+    "                continue\n",
+    "            visited.add((r, c, direction))\n",
+    "\n",
+    "            if r == end_row and c == end_col:\n",
+    "                if cost < min_cost:\n",
+    "                  min_cost = cost\n",
+    "                  best_paths = [path]\n",
+    "                elif cost == min_cost:\n",
+    "                  best_paths.append(path)\n",
+    "                continue\n",
+    "\n",
+    "            for (nr, nc), ndir, move_cost in get_neighbors(r, c, direction):\n",
+    "                new_cost = cost + move_cost\n",
+    "                new_path = path[:] # Create a copy!\n",
+    "                if move_cost == 1: # Only add new tile if we moved\n",
+    "                    new_path.append((nr, nc, ndir))\n",
+    "                else:\n",
+    "                    new_path[-1] = (r,c,ndir) #Update the direction for the current tile\n",
+    "                heapq.heappush(q, (new_cost, nr, nc, ndir, new_path))\n",
+    "        return min_cost, best_paths\n",
+    "\n",
+    "    min_cost, best_paths = dijkstra()\n",
+    "    \n",
+    "    path_tiles = set()\n",
+    "    for path in best_paths:\n",
+    "        for tile in path:\n",
+    "            path_tiles.add((tile[0], tile[1])) #Only add the row and column\n",
+    "\n",
+    "    print(len(path_tiles))\n",
+    "\n",
+    "\n",
+    "solve()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4da2715",
+   "metadata": {},
+   "source": [
+    "# Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "10b2c3b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n",
+      "64\n",
+      "476\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "def solve(grid):\n",
+    "    rows = len(grid)\n",
+    "    cols = len(grid[0])\n",
+    "\n",
+    "    start_row, start_col = -1, -1\n",
+    "    end_row, end_col = -1, -1\n",
+    "\n",
+    "    for r in range(rows):\n",
+    "        for c in range(cols):\n",
+    "            if grid[r][c] == 'S':\n",
+    "                start_row, start_col = r, c\n",
+    "            elif grid[r][c] == 'E':\n",
+    "                end_row, end_col = r, c\n",
+    "\n",
+    "    def is_valid(r, c):\n",
+    "        return 0 <= r < rows and 0 <= c < cols and grid[r][c] != '#'\n",
+    "\n",
+    "    def get_neighbors(r, c, direction):\n",
+    "        neighbors = []\n",
+    "        dr, dc = [(0, 1), (1, 0), (0, -1), (-1, 0)][direction]\n",
+    "        if is_valid(r + dr, c + dc):\n",
+    "            neighbors.append(((r + dr, c + dc), direction, 1))  # Move forward\n",
+    "\n",
+    "        for new_dir in [(direction + 1) % 4, (direction - 1) % 4]:\n",
+    "            neighbors.append(((r, c), new_dir, 1000)) #Rotate\n",
+    "        return neighbors\n",
+    "    \n",
+    "    def dijkstra():\n",
+    "        q = [(0, start_row, start_col, 0, [(start_row, start_col)])] \n",
+    "        visited = {}  # Initialize visited as a dictionary!\n",
+    "        min_cost = float('inf')\n",
+    "        best_paths = []\n",
+    "\n",
+    "        while q:\n",
+    "            cost, r, c, direction, path = heapq.heappop(q)\n",
+    "\n",
+    "            if (r, c, direction) in visited and cost > visited[(r,c,direction)]:\n",
+    "                continue\n",
+    "            visited[(r, c, direction)] = cost\n",
+    "\n",
+    "            if r == end_row and c == end_col:\n",
+    "                if cost < min_cost:\n",
+    "                  min_cost = cost\n",
+    "                  best_paths = [path]\n",
+    "                elif cost == min_cost:\n",
+    "                  best_paths.append(path)\n",
+    "                continue\n",
+    "\n",
+    "            for (nr, nc), ndir, move_cost in get_neighbors(r, c, direction):\n",
+    "                new_cost = cost + move_cost\n",
+    "                new_path = path[:]\n",
+    "                if move_cost == 1:\n",
+    "                    new_path.append((nr, nc))\n",
+    "                heapq.heappush(q, (new_cost, nr, nc, ndir, new_path))\n",
+    "        return min_cost, best_paths\n",
+    "\n",
+    "    min_cost, best_paths = dijkstra()\n",
+    "    \n",
+    "    path_tiles = set()\n",
+    "    for path in best_paths:\n",
+    "        for tile in path:\n",
+    "            path_tiles.add(tile)\n",
+    "\n",
+    "    return len(path_tiles)\n",
+    "\n",
+    "# Example inputs (same as before)\n",
+    "example1 = [\n",
+    "    list(\"###############\"),\n",
+    "    list(\"#.......#....E#\"),\n",
+    "    list(\"#.#.###.#.###.#\"),\n",
+    "    list(\"#.....#.#...#.#\"),\n",
+    "    list(\"#.###.#####.#.#\"),\n",
+    "    list(\"#.#.#.......#.#\"),\n",
+    "    list(\"#.#.#####.###.#\"),\n",
+    "    list(\"#...........#.#\"),\n",
+    "    list(\"###.#.#####.#.#\"),\n",
+    "    list(\"#...#.....#.#.#\"),\n",
+    "    list(\"#.#.#.###.#.#.#\"),\n",
+    "    list(\"#.....#...#.#.#\"),\n",
+    "    list(\"#.###.#.#.#.#.#\"),\n",
+    "    list(\"#S..#.....#...#\"),\n",
+    "    list(\"###############\"),\n",
+    "]\n",
+    "\n",
+    "example2 = [\n",
+    "    list(\"#################\"),\n",
+    "    list(\"#...#...#...#..E#\"),\n",
+    "    list(\"#.#.#.#.#.#.#.#.#\"),\n",
+    "    list(\"#.#.#.#...#...#.#\"),\n",
+    "    list(\"#.#.#.#.###.#.#.#\"),\n",
+    "    list(\"#...#.#.#.....#.#\"),\n",
+    "    list(\"#.#.#.#.#.#####.#\"),\n",
+    "    list(\"#.#...#.#.#.....#\"),\n",
+    "    list(\"#.#.#####.#.###.#\"),\n",
+    "    list(\"#.#.#.......#...#\"),\n",
+    "    list(\"#.#.###.#####.###\"),\n",
+    "    list(\"#.#.#...#.....#.#\"),\n",
+    "    list(\"#.#.#.#####.###.#\"),\n",
+    "    list(\"#.#.#.........#.#\"),\n",
+    "    list(\"#.#.#.#########.#\"),\n",
+    "    list(\"#S#.............#\"),\n",
+    "    list(\"#################\"),\n",
+    "]\n",
+    "\n",
+    "print(solve(example1))  # Output: 45\n",
+    "print(solve(example2))  # Output: 64\n",
+    "\n",
+    "with open(\"Input/InputDay16P1.txt\", \"r\") as f:\n",
+    "    grid = [list(line.strip()) for line in f]\n",
+    "print(solve(grid))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
