--- a/Day22.ipynb
+++ b/Day22.ipynb
@@ -1565,6 +1565,87 @@
     "\n",
     "print(part_2())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "50c784a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "import concurrent.futures\n",
+    "\n",
+    "def next_secret_number(secret):\n",
+    "    mixed = (secret * 64) ^ secret\n",
+    "    pruned = mixed % 16777216\n",
+    "    \n",
+    "    mixed = (pruned // 32) ^ pruned\n",
+    "    pruned = mixed % 16777216\n",
+    "    \n",
+    "    mixed = (pruned * 2048) ^ pruned\n",
+    "    pruned = mixed % 16777216\n",
+    "    \n",
+    "    return pruned\n",
+    "\n",
+    "def generate_prices(initial_secret):\n",
+    "    prices = []\n",
+    "    secret = initial_secret\n",
+    "    for _ in range(2000):\n",
+    "        secret = next_secret_number(secret)\n",
+    "        prices.append(secret % 10)\n",
+    "    return prices\n",
+    "\n",
+    "def calculate_changes(prices):\n",
+    "    changes = [prices[i] - prices[i-1] for i in range(1, len(prices))]\n",
+    "    return changes\n",
+    "\n",
+    "def evaluate_sequence(sequence, initial_secrets):\n",
+    "    total_bananas = 0\n",
+    "    \n",
+    "    for initial_secret in initial_secrets:\n",
+    "        prices = generate_prices(initial_secret)\n",
+    "        changes = calculate_changes(prices)\n",
+    "        \n",
+    "        found = False\n",
+    "        # Iterate over the changes to find the first occurrence of the sequence\n",
+    "        for i in range(len(changes) - 3):\n",
+    "            if tuple(changes[i:i+4]) == sequence:\n",
+    "                total_bananas += prices[i + 1]  # Add the price after the last change in the sequence\n",
+    "                found = True\n",
+    "                break\n",
+    "        \n",
+    "    return total_bananas\n",
+    "\n",
+    "def find_best_sequence(initial_secrets):\n",
+    "    all_sequences = list(product(range(-9, 10), repeat=4))\n",
+    "    \n",
+    "    max_bananas = 0\n",
+    "    \n",
+    "    with concurrent.futures.ProcessPoolExecutor() as executor:\n",
+    "        # Map the evaluation function to each sequence\n",
+    "        results = executor.map(evaluate_sequence, all_sequences, [initial_secrets]*len(all_sequences))\n",
+    "        \n",
+    "        for total_bananas in results:\n",
+    "            max_bananas = max(max_bananas, total_bananas)\n",
+    "    \n",
+    "    return max_bananas\n",
+    "\n",
+    "# Example input from Part Two\n",
+    "initial_secrets_example = [1, 2, 3, 2024]\n",
+    "\n",
+    "# Calculate the result for this example using parallel processing\n",
+    "result_example = find_best_sequence(initial_secrets_example)\n",
+    "print(result_example)  # This will print the maximum number of bananas you can get with this input"
+   ]
   }
  ],
  "metadata": {
